tests/snapshots/cli_insta__sort.stable.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - sort
    - "--stable"
    - "--flatten"
    - 1.0.0-alpha
    - 1.0.0
    - 2.0.0
---
success: true
exit_code: 0
----- stdout -----
---
versions:
  - 1.0.0
  - 2.0.0
potentially_ambiguous: false
----- stderr -----
