tests/snapshots/cli_insta__validate.invalid-semver.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - validate
    - a.b.c
---
success: false
exit_code: 1
----- stdout -----
---
valid: false
----- stderr -----
