tests/snapshots/cli_insta__validate.regression-of-bad-regex.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - validate
    - "-s"
    - 0.0.0a
---
success: false
exit_code: 1
----- stdout -----
---
valid: false
----- stderr -----
