tests/snapshots/cli_insta__validate.short.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - validate
    - "-s"
    - 18446744073709551616.0.0
---
success: false
exit_code: 1
----- stdout -----
---
valid: false
----- stderr -----
