tests/snapshots/cli_insta__validate.short.2.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - validate
    - 18446744073709551616.0.0
---
success: true
exit_code: 0
----- stdout -----
---
valid: true
----- stderr -----
